fixed autocomplete overflow x and y

--- a/_ui-src/sass/components/search-input/search-input.scss
+++ b/_ui-src/sass/components/search-input/search-input.scss
@@ -1,4 +1,5 @@
 .ui-menu{
     max-height: 400px;
-    overflow-y: auto;
+    overflow-y: hidden;
+    overflow-x: hidden;
 }
