--- a/_ui/css/main.css
+++ b/_ui/css/main.css
@@ -10,7 +10,8 @@ body {
 
 .ui-menu {
   max-height: 400px;
-  overflow-y: auto; }
+  overflow-y: hidden;
+  overflow-x: hidden; }
 
 /*! jQuery UI - v1.12.1 - 2016-09-14
 * http://jqueryui.com
